Separate Footer component.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import NavigationBar from "../components/navigation/NavigationBar/NavigationBar.astro";
+import Footer from "../components/navigation/Footer/Footer.astro";
 interface Props {
   title: string;
 }
@@ -19,6 +20,7 @@ const { title } = Astro.props;
   <body>
     <NavigationBar />
     <slot />
+    <Footer />
     <script
       is:inline
       src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
