--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,14 +2,13 @@
 import { Image } from "astro:assets";
 import * as FaIcons from "react-icons/fa";
 import * as HiIcons from "react-icons/hi2";
-import BrandImage from "../assets/images/brand/brand.svg";
 import YachtIllustration from "../assets/images/illustrations/yacht.svg";
 import UpdateProject from "../assets/images/projects/project_1.png";
 import JPProject from "../assets/images/projects/project_2.png";
 import Layout from "../layouts/Layout.astro";
-const { HiDevicePhoneMobile, HiShieldCheck, HiBolt } = HiIcons;
-const { FaGithub, FaWhatsapp, FaInstagram, FaGoogle } = FaIcons;
 import HeroIndex from "./sections/index/hero_index.astro";
+const { HiDevicePhoneMobile, HiShieldCheck, HiBolt } = HiIcons;
+const { FaWhatsapp } = FaIcons;
 ---
 
 <Layout title="RysthCraft | Software Developer | Professional Websites">
@@ -273,47 +272,4 @@ import HeroIndex from "./sections/index/hero_index.astro";
       </main>
     </article>
   </section>
-  <footer
-    class="w-full max-w-screen-xl py-10 px-4 mx-auto bg-[var(--CL-primary-blue)] rounded-t-xl"
-  >
-    <div class="text-center">
-      <a
-        href="/"
-        class="flex items-center justify-center mx-auto space-x-3 max-w-max"
-      >
-        <Image src={BrandImage} class="w-28 sm:w-32" alt="Flowbite Logo" />
-      </a>
-      <div class="mt-3 text-sm">
-        <p class="text-gray-200">
-          Professional Full-Stack Developer | Astro, React, Ruby on Rails
-        </p>
-        <p class="text-gray-200">© RysthCraft. 2024. All rights reserved.</p>
-      </div>
-
-      <div class="mt-3 space-x-1">
-        <a
-          target="_blank"
-          class="inline-flex items-center justify-center w-10 h-10 text-center text-gray-200 transition rounded-full hover:bg-white hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white dark:text-gray-200 dark:hover:text-gray-200 dark:hover:bg-gray-800"
-          href="https://maps.app.goo.gl/o3AGmb5HsDcg4pqP6"
-        >
-          <FaGoogle />
-        </a>
-
-        <a
-          target="_blank"
-          class="inline-flex items-center justify-center w-10 h-10 text-center text-gray-200 transition rounded-full hover:bg-white hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white dark:text-gray-200 dark:hover:text-gray-200 dark:hover:bg-gray-800"
-          href="https://github.com/Rysth"
-        >
-          <FaGithub />
-        </a>
-        <a
-          target="_blank"
-          class="inline-flex items-center justify-center w-10 h-10 text-center text-gray-200 transition rounded-full hover:bg-white hover:text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-600 focus:ring-offset-2 focus:ring-offset-white dark:text-gray-200 dark:hover:text-gray-200 dark:hover:bg-gray-800"
-          href="https://www.instagram.com/rysthcraft/"
-        >
-          <FaInstagram />
-        </a>
-      </div>
-    </div>
-  </footer>
 </Layout>
