Installed shadcn and create a Button component.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import { Image } from "astro:assets";
+import "@/styles/globals.css";
 import * as FaIcons from "react-icons/fa";
 import * as HiIcons from "react-icons/hi2";
 import YachtIllustration from "../assets/images/illustrations/yacht.svg";
