--- a/src/components/navigation/NavigationBar/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar/NavigationBar.astro
@@ -3,6 +3,7 @@ import { Image } from "astro:assets";
 import BrandImage from "../../../assets/images/brand/brand.svg";
 import * as ReactIcons from "react-icons/hi2";
 const { HiBars3BottomRight } = ReactIcons;
+import { Button } from "@/components/ui/button";
 ---
 
 <nav class="fixed top-0 z-50 w-full bg-[var(--CL-primary-blue)]">
@@ -13,11 +14,9 @@ const { HiBars3BottomRight } = ReactIcons;
       <Image src={BrandImage} class="w-28 sm:w-32" alt="Flowbite Logo" />
     </a>
     <div class="flex space-x-3 md:order-2 md:space-x-0">
-      <a
-        href="/contacts"
-        class="p-2 px-6 text-sm text-center text-[var(--CL-primary-blue)] duration-100 bg-white rounded-lg md:p-3 md:px-8 md:hover:bg-black md:hover:text-white md:transition grid place-items-center"
-        >Contact</a
-      >
+      <Button>
+        <a href="/contacts">Contact</a>
+      </Button>
       <button
         data-collapse-toggle="navbar-sticky"
         type="button"
