--- a/src/pages/sections/index/hero_index.astro
+++ b/src/pages/sections/index/hero_index.astro
@@ -8,6 +8,7 @@ import HTMLImage from "../../../assets/images/technologies/html.svg";
 import RailsImage from "../../../assets/images/technologies/rails.svg";
 import ReactImage from "../../../assets/images/technologies/react.svg";
 const { FaGithub, FaLinkedin } = FaIcons;
+import { Button } from "@/components/ui/button";
 ---
 
 <section
@@ -30,22 +31,19 @@ const { FaGithub, FaLinkedin } = FaIcons;
     </header>
     <main>
       <div class="flex items-center justify-center gap-3">
-        <a
-          href="https://github.com/Rysth"
-          target="_blank"
-          class="py-3 px-6 w-36 text-sm justify-center border border-transparent text-[var(--CL-primary-blue)] duration-100 bg-white rounded-lg md:px-8 md:hover:bg-black md:hover:text-white md:transition flex items-center gap-1"
-        >
-          <FaGithub className="text-xl" />
-           GitHub
-        </a>
-        <a
-          href="https://www.linkedin.com/in/john-palacios-rysthcraft/"
-          target="_blank"
-          class="flex items-center justify-center gap-1 px-6 py-3 text-sm text-white duration-100 border rounded-lg w-36 md:px-8 md:hover:bg-black md:hover:border-transparent md:hover:text-white md:transition"
-        >
-          <FaLinkedin className="text-xl" />
-           LinkedIn</a
-        >
+        <Button>
+          <FaGithub className="text-xl mr-1" />
+          <a href="https://github.com/Rysth" target="_blank">GitHub</a>
+        </Button>
+        <Button variant="outline">
+          <FaLinkedin className="text-xl mr-1" />
+          <a
+            href="https://www.linkedin.com/in/john-palacios-rysthcraft/"
+            target="_blank"
+          >
+            LinkedIn</a
+          >
+        </Button>
       </div>
     </main>
     <footer class="mx-auto">
