--- a/src/components/navigation/NavigationBar/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar/NavigationBar.astro
@@ -13,20 +13,21 @@ import { Button } from "@/components/ui/button";
     <a href="/" class="flex items-center space-x-3">
       <Image src={BrandImage} class="w-28 sm:w-32" alt="Flowbite Logo" />
     </a>
-    <div class="flex space-x-3 md:order-2 md:space-x-0">
+    <div class="flex items-center space-x-3 md:order-2 md:space-x-0">
       <Button>
         <a href="/contacts">Contact</a>
       </Button>
-      <button
+      <Button
+        size="icon"
+        variant="ghost"
         data-collapse-toggle="navbar-sticky"
-        type="button"
-        class="inline-flex items-center justify-center w-10 h-10 p-1 text-white rounded-lg md:hidden focus:ring-2 focus:ring-white"
         aria-controls="navbar-sticky"
         aria-expanded="false"
+        className="md:hidden"
       >
         <span class="sr-only">Open main menu</span>
         <HiBars3BottomRight className="text-white text-4xl" />
-      </button>
+      </Button>
     </div>
     <div
       class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
