--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -37,5 +37,6 @@ const { title } = Astro.props;
 
   body {
     font-family: "Poppins", sans-serif;
+    background-color: white;
   }
 </style>
