--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,4 @@
 ---
-import { Button } from "@/components/ui/button";
-import "@/styles/globals.css";
 import { Image } from "astro:assets";
 import * as FaIcons from "react-icons/fa";
 import * as HiIcons from "react-icons/hi2";
@@ -28,7 +26,7 @@ const { FaGithub, FaLinkedin } = FaIcons;
         <h2
           class="inline-block max-w-screen-sm text-3xl font-bold text-center lg:max-w-screen-md sm:text-xl md:text-4xl lg:text-6xl"
         >
-          Building <span class="mb-1 text-cyan-300">Amazing</span>
+          Building <span class="text-cyan-300">Amazing</span>
           Websites and Software Solutions
         </h2>
         <p
@@ -40,19 +38,19 @@ const { FaGithub, FaLinkedin } = FaIcons;
       </header>
       <main>
         <div class="flex items-center justify-center gap-3">
-          <Button>
-            <FaGithub className="text-xl mr-1" />
+          <button class="w-32 btn">
+            <FaGithub className="text-xl" />
             <a href="https://github.com/Rysth" target="_blank">GitHub</a>
-          </Button>
-          <Button variant="outline">
-            <FaLinkedin className="text-xl mr-1" />
+          </button>
+          <button class="w-32 btn btn-outline btn-info hover:!text-white">
+            <FaLinkedin className="text-xl" />
             <a
               href="https://www.linkedin.com/in/john-palacios-rysthcraft/"
               target="_blank"
             >
-              LinkedIn</a
-            >
-          </Button>
+              LinkedIn
+            </a>
+          </button>
         </div>
       </main>
       <footer class="mx-auto">
