Improve navigation bar.

--- a/src/components/navigation/NavigationBar/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar/NavigationBar.astro
@@ -31,26 +31,26 @@ const { HiBars3BottomRight, HiPhoneArrowDownLeft } = ReactIcons;
       id="navbar-sticky"
     >
       <ul
-        class="flex flex-col p-2 mt-4 border border-gray-100 rounded-lg md:p-0 bg-gray-50 md:space-x-4 md:flex-row md:mt-0 md:border-0 md:bg-transparent"
+        class="flex flex-col gap-1 p-2 mt-4 bg-gray-100 border rounded-xl md:p-0 md:flex-row md:mt-0 md:border-0 md:bg-transparent"
       >
         <li>
           <a
             href="/"
-            class="block px-3 py-2 text-blue-800 rounded text-sm md:text-white hover:bg-[var(--CL-primary-blue)] hover:text-white md:hover:bg-transparent md:hover:!bg-white md:hover:text-gray-900 md:p-2 transition"
+            class="w-full text-left text-white btn btn-primary btn-ghost bg-[var(--CL-primary-blue)]"
             >Home</a
           >
         </li>
         <li>
           <a
             href="/services"
-            class="block px-3 py-2 text-blue-800 rounded text-sm md:text-white hover:bg-[var(--CL-primary-blue)] hover:text-white md:hover:bg-transparent md:hover:!bg-white md:hover:text-gray-900 md:p-2 transition"
+            class="w-full text-left text-white btn btn-primary btn-ghost bg-[var(--CL-primary-blue)]"
             >Services</a
           >
         </li>
         <li>
           <a
             href="/portfolio"
-            class="block px-3 py-2 text-blue-800 rounded text-sm md:text-white hover:bg-[var(--CL-primary-blue)] hover:text-white md:hover:bg-transparent md:hover:!bg-white md:hover:text-gray-900 md:p-2 transition"
+            class="w-full text-left text-white btn btn-primary btn-ghost bg-[var(--CL-primary-blue)]"
             >Portfolio</a
           >
         </li>
