--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -189,7 +189,9 @@ const { FaGithub, FaLinkedin } = FaIcons;
           >
             Web Solutions for Small Businesses
           </h2>
-          <p class="max-w-md text-sm text-gray-500 sm:text-base">
+          <p
+            class="max-w-md mx-auto text-sm text-gray-500 sm:text-base md:ml-0"
+          >
             Custom web designs tailored for small businesses. Secure, efficient,
             and distinctive solutions to boost your digital presence and drive
             growth.
@@ -197,7 +199,7 @@ const { FaGithub, FaLinkedin } = FaIcons;
           <a
             href="http://tinyurl.com/contact-wsp"
             target="_blank"
-            class="flex items-center justify-center gap-1 px-6 py-3 mx-auto text-sm text-center text-white duration-100 border border-transparent rounded-lg bg-[var(--CL-primary-blue)] w-36 sm:mx-0 md:px-8 md:hover:bg-black md:transition"
+            class="btn btn-neutral md:max-w-32"
           >
             <FaWhatsapp className="text-xl" />
             Contact
@@ -265,16 +267,16 @@ const { FaGithub, FaLinkedin } = FaIcons;
             </p>
             <div class="flex flex-wrap gap-1 mt-3">
               <span
-                class="grid w-16 text-xs text-white uppercase bg-indigo-500 rounded place-items-center"
+                class="text-xs text-white uppercase bg-indigo-600 rounded badge"
                 >Strapi</span
               >
               <span
-                class="grid w-16 text-xs text-white uppercase bg-blue-500 rounded place-items-center"
+                class="text-xs text-white uppercase bg-blue-500 rounded badge"
               >
-                React
-              </span>
+                React</span
+              >
               <span
-                class="grid w-16 text-xs text-white uppercase bg-purple-500 rounded place-items-center"
+                class="text-xs text-white uppercase bg-purple-500 rounded badge"
                 >Tailwind</span
               >
             </div>
@@ -283,7 +285,7 @@ const { FaGithub, FaLinkedin } = FaIcons;
             <a
               href="https://updateec.netlify.app/"
               target="_blank"
-              class="block text-center uppercase w-full py-3 text-xs font-medium text-white bg-[var(--CL-primary-blue)] rounded md:hover:bg-black md:transition duration-500"
+              class="w-full btn bg-[var(--CL-primary-blue)] text-white"
             >
               See Live</a
             >
@@ -328,12 +330,12 @@ const { FaGithub, FaLinkedin } = FaIcons;
             </p>
             <div class="flex flex-wrap gap-1 mt-3">
               <span
-                class="grid w-16 text-xs text-white uppercase bg-orange-500 rounded place-items-center"
+                class="text-xs text-white uppercase bg-orange-600 rounded badge"
               >
-                Astro
-              </span>
+                Astro</span
+              >
               <span
-                class="grid w-16 text-xs text-white uppercase bg-purple-500 rounded place-items-center"
+                class="text-xs text-white uppercase rounded badge bg-cyan-500"
                 >Tailwind</span
               >
             </div>
@@ -342,7 +344,7 @@ const { FaGithub, FaLinkedin } = FaIcons;
             <a
               href="https://jprefrigeracion.netlify.app/"
               target="_blank"
-              class="block text-center uppercase w-full py-3 text-xs font-medium text-white bg-[var(--CL-primary-blue)] rounded md:hover:bg-black md:transition duration-500"
+              class="w-full btn bg-[var(--CL-primary-blue)] text-white"
             >
               See Live</a
             >
