--- a/src/components/navigation/NavigationBar/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar/NavigationBar.astro
@@ -5,8 +5,12 @@ import * as ReactIcons from "react-icons/hi2";
 const { HiBars3BottomRight, HiPhoneArrowDownLeft } = ReactIcons;
 ---
 
-<nav class="fixed top-0 z-50 w-full bg-[var(--CL-primary-blue)]">
-  <div
+<nav class="fixed top-0 z-50 w-full">
+  <di
+    md:
+    p-2v
+    block
+    bg-gray-100
     class="flex flex-wrap items-center justify-between max-w-screen-xl p-4 mx-auto sm:py-6"
   >
     <a href="/" class="flex items-center space-x-3">
@@ -31,30 +35,30 @@ const { HiBars3BottomRight, HiPhoneArrowDownLeft } = ReactIcons;
       id="navbar-sticky"
     >
       <ul
-        class="flex flex-col gap-1 p-2 mt-4 bg-gray-100 border rounded-xl md:p-0 md:flex-row md:mt-0 md:border-0 md:bg-transparent"
+        class="flex flex-col gap-1 p-2 mt-4 bg-gray-100 border rounded-xl md:p-0 md:flex-row md:mt-0 md:border-0 md:bg-transparent md:space-x-4"
       >
         <li>
           <a
             href="/"
-            class="w-full text-left text-white btn btn-primary btn-ghost bg-[var(--CL-primary-blue)]"
+            class="block w-full p-2 text-sm text-left transition rounded md:text-white hover:text-white hover:bg-black"
             >Home</a
           >
         </li>
         <li>
           <a
             href="/services"
-            class="w-full text-left text-white btn btn-primary btn-ghost bg-[var(--CL-primary-blue)]"
+            class="block w-full p-2 text-sm text-left transition rounded md:text-white hover:text-white hover:bg-black"
             >Services</a
           >
         </li>
         <li>
           <a
             href="/portfolio"
-            class="w-full text-left text-white btn btn-primary btn-ghost bg-[var(--CL-primary-blue)]"
+            class="block w-full p-2 text-sm text-left transition rounded md:text-white hover:text-white hover:bg-black"
             >Portfolio</a
           >
         </li>
       </ul>
     </div>
-  </div>
+  </di>
 </nav>
