--- a/src/components/navigation/NavigationBar/NavigationBar.astro
+++ b/src/components/navigation/NavigationBar/NavigationBar.astro
@@ -5,7 +5,7 @@ import * as ReactIcons from "react-icons/hi2";
 const { HiBars3BottomRight, HiPhoneArrowDownLeft } = ReactIcons;
 ---
 
-<nav class="fixed top-0 z-50 w-full">
+<nav class="fixed top-0 z-50 w-full bg-[var(--CL-primary-blue)]">
   <di
     md:
     p-2v
