--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,5 @@
 ---
-import NavigationBar from "../components/navigation/NavigationBar/NavigationBar.astro";
-import Footer from "../components/navigation/Footer/Footer.astro";
+import NavigationBar from "@/components/navigation/NavigationBar.astro";
 interface Props {
   title: string;
 }
@@ -20,7 +19,6 @@ const { title } = Astro.props;
   <body>
     <NavigationBar />
     <slot />
-    <Footer />
     <script
       is:inline
       src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"
@@ -32,11 +30,15 @@ const { title } = Astro.props;
   @import url("https://fonts.cdnfonts.com/css/poppins");
 
   :root {
-    --CL-primary-blue: #2e3191;
+    --CL-primary: #2e3191;
   }
 
   body {
     font-family: "Poppins", sans-serif;
     background-color: white;
+  }
+
+  .bg-brand-blue {
+    @apply bg-[var(--CL-primary)];
   }
 </style>
