--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,42 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import StaticWebsite from "../assets/images/illustrations/static_website.svg";
+import { Image } from "astro:assets";
+import * as ReactIcons from "react-icons/fa";
+const { FaWhatsapp, FaArrowRight } = ReactIcons;
 ---
 
-<Layout title="RysthDesign | Web Designer | Desarrollador Web" />
+<Layout title="RysthDesign | Web Designer | Desarrollador Web">
+  <section class="relative h-screen p-2 lg:h-max">
+    <article
+      class="h-full max-w-screen-xl pt-16 mx-auto space-y-10 lg:pt-32 lg:grid lg:grid-cols-2"
+    >
+      <Image src={StaticWebsite} alt="" class="w-full lg:h-full" />
+      <main
+        class="justify-center space-y-4 text-center lg:text-left lg:flex lg:flex-col"
+      >
+        <h2
+          class="text-2xl font-bold md:text-3xl lg:text-5xl xl:text-6xl lg:max-w-2xl"
+        >
+          Diseñando Aplicaciones y Sitios Web Profesionales
+        </h2>
+        <p class="text-sm text-gray-500 md:text-base lg:max-w-xl">
+          Desarrollador Web Full-Stack para asistirte con soluciones
+          tecnologicas modernas, escalables y seguras.
+        </p>
+        <div class="mt-10">
+          <a
+            href="http://tinyurl.com/contact-ws"
+            target="_blank"
+            class="text-xs text-white border-transparent btn lg:text-sm btn-neutral bg-brand-blue group"
+          >
+            Contactar
+            <FaArrowRight
+              className="block text-xl group-hover:translate-x-1 transition"
+            />
+          </a>
+        </div>
+      </main>
+    </article>
+  </section>
+</Layout>
