--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,23 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import StaticWebsite from "../assets/images/illustrations/static_website.svg";
+import WaveSVG from "../assets/background/wave.svg";
 import { Image } from "astro:assets";
 import * as HiIcons from "react-icons/hi2";
 import * as FaIcons from "react-icons/fa";
 import * as IoIcons from "react-icons/io5";
 import ServiceCard from "../components/ui/ServiceCard.astro";
 import Subtitle from "../components/heading/Subtitle.astro";
-const { FaWhatsapp, FaArrowRight } = FaIcons;
+const { FaArrowRight } = FaIcons;
 const { IoLogoWebComponent } = IoIcons;
 const { HiOutlineCodeBracketSquare, HiOutlineBuildingStorefront } = HiIcons;
 ---
 
 <Layout title="RysthDesign | Web Designer | Desarrollador Web">
-  <section class="relative h-screen p-2 lg:h-max">
+  <section class="h-full p-2 lg:h-max">
+    <Image src={WaveSVG} alt="" class="absolute top-0 left-0 w-full md:w-4/5" />
     <article
-      class="h-full max-w-screen-xl gap-20 py-16 mx-auto space-y-10 lg:py-28 lg:pb-24 lg:grid lg:grid-cols-2"
+      class="relative z-20 max-w-screen-xl gap-20 py-16 mx-auto space-y-10 h-max lg:py-32 lg:pb-16 lg:grid lg:grid-cols-2"
     >
       <Image src={StaticWebsite} alt="" class="w-full lg:h-full" />
       <main
@@ -26,7 +28,7 @@ const { HiOutlineCodeBracketSquare, HiOutlineBuildingStorefront } = HiIcons;
         >
           Desarrollo de Aplicaciones y Sitios Web Profesionales
         </h2>
-        <p class="max-w-xs text-sm text-gray-500 md:text-base lg:max-w-lg">
+        <p class="max-w-lg mx-auto text-sm text-gray-500 md:text-base lg:ml-0">
           Servicios de desarrollo web para negocios con soluciones tecnológicas
           modernas, escalables y seguras.
         </p>
@@ -75,5 +77,8 @@ const { HiOutlineCodeBracketSquare, HiOutlineBuildingStorefront } = HiIcons;
         />
       </section>
     </article>
+  </section>
+  <section class="p-2">
+    <article class="max-w-screen-xl mx-auto"></article>
   </section>
 </Layout>
