Fix small icons.

--- a/src/components/ui/ServiceCard.astro
+++ b/src/components/ui/ServiceCard.astro
@@ -6,7 +6,7 @@ const { title, description, IconComponent, bgColorClass } = Astro.props;
   class="flex flex-col items-center justify-center p-4 text-center border h-96 group"
 >
   <header class="relative mb-6">
-    <IconComponent className="w-full h-28 relative z-20" />
+    <IconComponent className=" h-28 w-28 relative z-20" />
     <span
       class={`absolute z-10 w-14 h-14 transition duration-700 rounded-full ${bgColorClass} bottom-0 left-0 group-hover:-translate-y-14 group-hover:translate-x-14`}
     ></span>
