--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import StaticWebsite from "../assets/images/illustrations/static_website.svg";
-import WaveSVG from "../assets/background/wave.svg";
+import WaveSVG from "../assets/background/wave.png";
 import { Image } from "astro:assets";
 import * as HiIcons from "react-icons/hi2";
 import * as FaIcons from "react-icons/fa";
