Create about section.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,4 +62,8 @@ const { title } = Astro.props;
   .bg-brand-blue {
     @apply bg-[var(--CL-primary)];
   }
+
+  .text-brand-blue {
+    @apply text-[var(--CL-primary)];
+  }
 </style>
