--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import StaticWebsite from "../assets/images/illustrations/static_website.svg";
+import DotsImage from "../assets/background/dots.png";
+import WebsiteIllustration from "../assets/images/illustrations/pair_programming.svg";
+import ResponsiveIllustration from "../assets/images/illustrations/responsive.svg";
 import WaveSVG from "../assets/background/wave.png";
 import { Image } from "astro:assets";
 import * as HiIcons from "react-icons/hi2";
@@ -19,7 +21,7 @@ const { HiOutlineCodeBracketSquare, HiOutlineBuildingStorefront } = HiIcons;
     <article
       class="relative z-20 max-w-screen-xl gap-20 py-16 mx-auto space-y-10 h-max lg:py-32 lg:pb-16 lg:grid lg:grid-cols-2"
     >
-      <Image src={StaticWebsite} alt="" class="w-full lg:h-full" />
+      <Image src={ResponsiveIllustration} alt="" class="w-full lg:h-full" />
       <main
         class="justify-center space-y-4 text-center lg:text-left lg:flex lg:flex-col"
       >
@@ -28,7 +30,9 @@ const { HiOutlineCodeBracketSquare, HiOutlineBuildingStorefront } = HiIcons;
         >
           Desarrollo de Aplicaciones y Sitios Web Profesionales
         </h2>
-        <p class="max-w-lg mx-auto text-sm text-gray-500 md:text-base lg:ml-0">
+        <p
+          class="max-w-lg mx-auto text-sm leading-6 text-gray-500 md:text-base lg:ml-0"
+        >
           Servicios de desarrollo web para negocios con soluciones tecnológicas
           modernas, escalables y seguras.
         </p>
@@ -79,6 +83,34 @@ const { HiOutlineCodeBracketSquare, HiOutlineBuildingStorefront } = HiIcons;
     </article>
   </section>
   <section class="p-2">
-    <article class="max-w-screen-xl mx-auto"></article>
+    <article class="grid max-w-screen-xl gap-20 py-12 mx-auto md:grid-cols-2">
+      <Image src={WebsiteIllustration} alt="" class="w-full lg:h-full" />
+      <main
+        class="relative z-20 flex flex-col items-center justify-center md:items-start gap-7 md:gap-10"
+      >
+        <h3 class="font-semibold text-brand-blue">Acerca de Nosotros</h3>
+        <div class="space-y-2 text-center md:space-y-4 md:text-left">
+          <h2 class="text-2xl font-bold md:text-4xl lg:!leading-10 lg:max-w-lg">
+            Expertos en Diseño y Desarrollo Web a Medida
+          </h2>
+          <p
+            class="max-w-xl mx-auto text-sm leading-6 text-gray-500 md:text-base lg:ml-0"
+          >
+            Nos enfocamos en diseñar y desarrollas plataformas seguras,
+            funcionales y con una gran experiencia de usuario, asegurando que
+            cada proyecto no solo complemente, sino que también potencie las
+            capacidades de tu negocio.
+          </p>
+        </div>
+        <a
+          href="/"
+          class="text-white btn btn-neutral bg-brand-blue max-w-max group"
+        >
+          Descubre más <FaArrowRight
+            className="block text-xl group-hover:translate-x-1 transition"
+          />
+        </a>
+      </main>
+    </article>
   </section>
 </Layout>
