--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,18 +1,24 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import DotsImage from "../assets/background/dots.png";
+import { Image } from "astro:assets";
+import * as FaIcons from "react-icons/fa";
+import * as HiIcons from "react-icons/hi2";
+import * as IoIcons from "react-icons/io5";
+import WaveSVG from "../assets/background/wave.png";
 import WebsiteIllustration from "../assets/images/illustrations/pair_programming.svg";
 import ResponsiveIllustration from "../assets/images/illustrations/responsive.svg";
-import WaveSVG from "../assets/background/wave.png";
-import { Image } from "astro:assets";
-import * as HiIcons from "react-icons/hi2";
-import * as FaIcons from "react-icons/fa";
-import * as IoIcons from "react-icons/io5";
-import ServiceCard from "../components/ui/ServiceCard.astro";
 import Subtitle from "../components/heading/Subtitle.astro";
+import ServiceCard from "../components/ui/ServiceCard.astro";
+import FeatureCard from "../components/ui/FeatureCard.astro";
+import Layout from "../layouts/Layout.astro";
 const { FaArrowRight } = FaIcons;
 const { IoLogoWebComponent } = IoIcons;
-const { HiOutlineCodeBracketSquare, HiOutlineBuildingStorefront } = HiIcons;
+const {
+  HiOutlineCodeBracketSquare,
+  HiOutlineBuildingStorefront,
+  HiOutlineLightBulb,
+  HiOutlineScale,
+  HiOutlineShieldCheck,
+} = HiIcons;
 ---
 
 <Layout title="RysthDesign | Web Designer | Desarrollador Web">
@@ -83,7 +89,9 @@ const { HiOutlineCodeBracketSquare, HiOutlineBuildingStorefront } = HiIcons;
     </article>
   </section>
   <section class="p-2">
-    <article class="grid max-w-screen-xl gap-20 py-12 mx-auto md:grid-cols-2">
+    <article
+      class="grid max-w-screen-xl gap-20 py-12 mx-auto md:grid-cols-2 md:pb-24"
+    >
       <Image src={WebsiteIllustration} alt="" class="w-full lg:h-full" />
       <main
         class="relative z-20 flex flex-col items-center justify-center md:items-start gap-7 md:gap-10"
@@ -91,15 +99,14 @@ const { HiOutlineCodeBracketSquare, HiOutlineBuildingStorefront } = HiIcons;
         <h3 class="font-semibold text-brand-blue">Acerca de Nosotros</h3>
         <div class="space-y-2 text-center md:space-y-4 md:text-left">
           <h2 class="text-2xl font-bold md:text-4xl lg:!leading-10 lg:max-w-lg">
-            Expertos en Diseño y Desarrollo Web a Medida
+            Profesionales Expertos en Diseño y Desarrollo Web Personalizados
           </h2>
           <p
-            class="max-w-xl mx-auto text-sm leading-6 text-gray-500 md:text-base lg:ml-0"
+            class="max-w-lg mx-auto text-sm leading-6 text-gray-500 md:text-base lg:ml-0"
           >
-            Nos enfocamos en diseñar y desarrollas plataformas seguras,
-            funcionales y con una gran experiencia de usuario, asegurando que
-            cada proyecto no solo complemente, sino que también potencie las
-            capacidades de tu negocio.
+            Ofrecemos plataformas 100% seguras, funcionales y personalizadas,
+            asegurando que cada proyecto no solo complemente, sino que también
+            potencie las capacidades de tu negocio.
           </p>
         </div>
         <a
@@ -111,6 +118,40 @@ const { HiOutlineCodeBracketSquare, HiOutlineBuildingStorefront } = HiIcons;
           />
         </a>
       </main>
+    </article>
+  </section>
+  <section class="p-2">
+    <article class="max-w-screen-xl py-12 mx-auto md:py-24 lg:py-24">
+      <Subtitle
+        title="Nuestras Características"
+        description="Explora nuestras competencias clave en diseño y desarrollo web."
+      />
+      <section class="grid grid-cols-1 gap-6 mt-16 md:mt-20 md:grid-cols-4">
+        <FeatureCard
+          title="Diseño Responsivo"
+          description="Adaptabilidad y eficiencia en diferentes dispositivos."
+          IconComponent={HiOutlineCodeBracketSquare}
+          bgColor="orange-500"
+        />
+        <FeatureCard
+          title="Integración de Seguridad"
+          description="Seguridad robusta para protección de datos."
+          IconComponent={HiOutlineShieldCheck}
+          bgColor="green-500"
+        />
+        <FeatureCard
+          title="Infraestructura Escalable"
+          description="Soluciones que crecen con tus necesidades."
+          IconComponent={HiOutlineScale}
+          bgColor="violet-500"
+        />
+        <FeatureCard
+          title="Desempeño Óptimo"
+          description="Alta eficiencia y velocidad en cada proyecto."
+          IconComponent={HiOutlineLightBulb}
+          bgColor="blue-500"
+        />
+      </section>
     </article>
   </section>
 </Layout>
