--- a/src/components/ui/FeatureCard.astro
+++ b/src/components/ui/FeatureCard.astro
@@ -12,9 +12,9 @@ const colorStyles = {
     textColor: "text-green-500",
     hoverColor: "hover:bg-green-500",
   },
-  "violet-500": {
-    textColor: "text-violet-500",
-    hoverColor: "hover:bg-violet-500",
+  "indigo-500": {
+    textColor: "text-indigo-500",
+    hoverColor: "hover:bg-indigo-500",
   },
   "blue-500": { textColor: "text-blue-500", hoverColor: "hover:bg-blue-500" },
   // Agrega más colores según sea necesario
