--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -143,7 +143,7 @@ const {
           title="Infraestructura Escalable"
           description="Soluciones que crecen con tus necesidades."
           IconComponent={HiOutlineScale}
-          bgColor="violet-500"
+          bgColor="indigo-500"
         />
         <FeatureCard
           title="Desempeño Óptimo"
