Enhance description and title of the website.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,9 @@ const {
 } = HiIcons;
 ---
 
-<Layout title="RysthDesign | Web Designer | Desarrollador Web">
+<Layout
+  title="RysthDesign | Desarrollador de Aplicaciones y Sitios Web Profesionales | Tíendas en Línea | HTML, CSS, JavaScript, React, Ruby on Rails, WordPress"
+>
   <section class="h-full p-2 lg:h-max">
     <Image src={WaveSVG} alt="" class="absolute top-0 left-0 w-full md:w-4/5" />
     <article
