--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,10 @@ const { title } = Astro.props;
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
+    <meta
+      name="description"
+      content="Desarrollador Web Full-Stack especializado en la creación de aplicaciones web, sitios web profesionales y tiendas en línea. Expertise en React, Astro, Ruby on Rails y Wordpress. Soluciones innovadoras y personalizadas para tu negocio en línea."
+    />
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <meta name="generator" content={Astro.generator} />
